# postgres-to-falkordb

./: .gitignore  README.md
.github/: wordlist.txt
.github/workflows/: coverage.yml  main.yml  pr-checks.yml  spellcheck.yml
postgres-to-falkordb/: Cargo.toml  example.config.yaml  pagila_to_falkordb.yaml
postgres-to-falkordb/src/: config.rs  cypher.rs  main.rs  mapping.rs  orchestrator.rs  sink.rs  sink_async.rs  source.rs  state.rs
